Fix bug when current ipg members attempt to link their account a server error is returned. Fixed login dropdown layout bug. Added an icon to the browser tabs

--- a/IPGMMS/IPGMMS/Content/SharedLayout.css
+++ b/IPGMMS/IPGMMS/Content/SharedLayout.css
@@ -19,7 +19,7 @@ body{
     background-color: #fff;
     display: none;
     position: absolute;
-    min-width: 160px;
+    min-width: 165px;
     margin: 0;
     padding: 0;
     right: 20px;
