--- a/IPGMMS/IPGMMS/Content/Site.css
+++ b/IPGMMS/IPGMMS/Content/Site.css
@@ -109,7 +109,7 @@ p, body {
     background-color: #fff;
     display: none;
     position: absolute;
-    min-width: 160px;
+    min-width: 165px;
     margin: 0;
     padding: 0;
     right: 0;
